--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="arrow_back_ripple_color">#B5B5B5</color>
     <color name="edit_text_color">#78746D</color>
     <color name="sign_up_text_color">#3C3A36</color>
+    <color name="sign_in_text_color">#78746D</color>
     <color name="sign_up_btn_color">#E3562A</color>
 </resources>
