--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,14 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <!-- Sign Up -->
     <color name="arrow_back_ripple_color">#B5B5B5</color>
     <color name="edit_text_color">#78746D</color>
     <color name="sign_up_text_color">#3C3A36</color>
     <color name="sign_in_text_color">#78746D</color>
     <color name="sign_up_btn_color">#E3562A</color>
+
+    <!-- Topic -->
+    <color name="topic_title_color">#3F414E</color>
+    <color name="topic_subtitle_color">#A1A4B2</color>
 </resources>
