--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="android:textColorHint">@color/edit_text_color</item>
         <item name="android:textSize">14sp</item>
     </style>
+    <style name="topic_card">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:adjustViewBounds">true</item>
+    </style>
 </resources>
