--- a/app/src/main/res/layout/activity_topic.xml
+++ b/app/src/main/res/layout/activity_topic.xml
@@ -5,7 +5,7 @@
     android:id="@+id/ConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TopicActivity">
+    tools:context=".mvp.view.TopicActivity">
 
     <ImageView
         android:id="@+id/imageViewClouds"
